# protein-renderer

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: rust-ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/traits/: renderable.rs  selectable.rs
crates/structure/: Cargo.toml
crates/structure/src/: lib.rs  representations.rs
examples/: 1fap.cif  bevy_ballandstick.rs  bevy_protein.rs  bevy_protein_mesh.rs  bevy_protein_mesh_camera.rs  bevy_protein_mesh_custom.rs
src/: bonds.rs  colors.rs  lib.rs  plugin.rs  renderable.rs  structure.rs
wasm-examples/simpleweb/: Cargo.toml  Readme.md  index.html  run_wasm.sh
wasm-examples/simpleweb/src/: lib.rs  lib.rs_bak
