[package]
name = "protein_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
pdbtbx = "0.11.0"
bon = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
# protein_renderer_core = { path = "./crates/core" }


[dev-dependencies]
# Dependencies only used for tests
assert_approx_eq = "1.1"
