[package]
name = "protein_renderer_structure"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Protein structure representation for the protein renderer project"
license = "MIT OR Apache-2.0"

[dependencies]
# Internal dependency on the core crate
protein_renderer_core = { path = "../core" }

# External dependencies
bevy = "0.14.2"
pdbtbx = "0.11"
nalgebra = "0.33"
itertools = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1" # For benchmarking
