[package]
name = "simpleweb"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = "0.14.2"
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "webgl2",
    "bevy_pbr",
    "bevy_render",
] }
pdbtbx = "0.11"
protein-renderer = { path = "../.." }
wasm-bindgen = "0.2"
bevy_file_dialog = { path = "../../../bevy_file_dialog/", features = [
    "async-std",
] }
web-sys = { version = "0.3.70", features = ["console"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1


[build]
target = "wasm32-unknown-unknown"
